# worked-hours-count

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  quasar.conf.js  quasar.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  globals.css  index.template.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/boot/: axios.js  dexie.js
src/components/: CalendarView.tsx  Clock.tsx  Clock.vue  EssentialLink.vue  FooterMenu.tsx  FooterMenu.vue  Header.tsx  Header.vue  HeaderPage.vue  ManualEntry.tsx  RunTime.tsx  RunTime.vue  SelectJiraIssue.tsx  SelectTask.vue  TimePicker.tsx  TimePromptModal.tsx
src/css/: app.sass  app.scss
src/db/: crud.js  database.ts  seeder.js
src/jira/: client.ts  oauth.ts  tokenManager.ts
src/layouts/: MainLayout.vue
src/pages/: Error404.vue  HomePage.tsx  Index.vue  List.vue  ListPage.tsx  NotFoundPage.tsx  SettingsPage.tsx  Tasks.vue
src/router/: routes.js
src/store/: index.js
src/store/clock/: mutations.js  state.js
src/store/tasks/: getters.js
src/utils/: csv.ts  dateUtils.js  dateUtils.ts
